# quantum-fortuna-predictive-ai

./: .gitignore  .gitmodules  DEPLOYMENT.md  DEPLOY_HISTORY.md  Makefile  QUANTUM-DASHBOARD.md  README.md  index.html  jest.config.cjs  jest.setup.cjs  package-lock.json  package.json  pyproject.toml  repo-bootstrap.sh  tsconfig.test.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
assets/: charts-a80405f2.js  icons-745220cf.js  index-20124e30.css  index-BAdokAFl.js  index-db8e4107.js
data/: results_2025.html
docs/: .deploy-trigger  api.html  index.html
docs/api/: index.html
docs/assets/: charts-CzMWIQA6.js  icons-BB076WDS.js  icons-DLwMmbIg.js  index-BIP9oStG.css  index-BJS41U2t.js  index-BTwTnc1k.css  index-DnASASPA.js
notebooks/: 01_demonstrating_failure.ipynb
src/: App.tsx  __init__.py  cli.py  modeling.py  pipeline.py  rng.py  types.ts
src/components/: AnalysisModule.tsx  BenchmarkingModule.tsx  DashboardTableOfContents.tsx  ExplainabilityModule.tsx  InsightsModule.tsx  Navigation.tsx  PredictionAnalysisReport.tsx  PredictionsModule.tsx  QuantumAlgorithmExplainer.tsx  QuantumDashboard.tsx  QuantumEntropyVisualizer.tsx  QuantumNumberGenerator.tsx  QuantumPredictionHistory.tsx  QuantumPredictionResults.tsx  QuantumSettings.tsx  ScheduleModule.tsx  September6Dashboard.tsx  TrustModule.tsx  UserPortal.tsx  WelcomeModule.tsx
src/components/__tests__/: App.test.tsx  Navigation.test.tsx
src/components/ui/: button.tsx  card.tsx  label.tsx  (+5 more)
src/data/: lotteryDataService.ts  predictionEngine.ts  quantumPredictionEngine.ts  september6Report.ts
src/hooks/: useQuantumPrediction.ts
src/services/: apiService.ts
tests/: test_pipeline.py  test_rng.py
